Get all product

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "esModuleInterop": true,
     "jsx": "react-jsx",
     "moduleResolution": "node16",
+    "module": "Node16",
     "resolveJsonModule": true,
     "target": "ES2019",
     "strict": true,
@@ -17,9 +18,7 @@
     "paths": {
       "~/*": ["./app/*"]
     },
-    "types": [
-      "@shopify/app-bridge-types"
-    ],
+    "types": ["@shopify/app-bridge-types"],
     "noEmit": true
   }
 }
